--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.3",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
+    "recharts": "^2.15.1",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
